--- a/LoginActivity/res/layout/show_story.xml
+++ b/LoginActivity/res/layout/show_story.xml
@@ -18,7 +18,23 @@
             android:text="@string/title_activity_showStory"
             android:textSize="25sp"
             android:textStyle="bold" />
+		<!-- Place Part -->
 
+        <LinearLayout
+            android:id="@+id/placeShowStoryLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+    
+             <Button
+                android:id="@+id/placeShowStory"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:onClick="seePlaceProfile"
+                android:textSize="18sp"
+                android:background="@null" />
+        </LinearLayout>
         <!-- Image Part -->
 
         <LinearLayout
@@ -44,6 +60,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
+         
             <TextView
                 android:id="@+id/storyShowStory"
                 android:layout_width="fill_parent"
@@ -57,13 +74,19 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-
+   		<TextView
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:text="@string/owner"
+                android:textSize="12sp"
+                android:textStyle="bold" />
             <Button
                 android:id="@+id/ownerShowStory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="seeOwnerProfile"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:background="@null" />
         </LinearLayout>
         <!-- Theme Part -->
 
@@ -72,7 +95,12 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-
+   			<TextView
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:text="@string/theme"
+                android:textSize="18sp"
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/themeShowStory"
                 android:layout_width="fill_parent"
@@ -86,7 +114,12 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-
+		<TextView
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:text="@string/avgRate"
+                android:textSize="18sp"
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/rateShowStory"
                 android:layout_width="fill_parent"
@@ -103,7 +136,26 @@
             android:listSelector="@drawable/list_selector"
             android:longClickable="true" >
         </ListView>
+		<!-- Rate Story Action Part -->
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:text="@string/rateStory"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinnerRate"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown" />
+        </LinearLayout>
         <RelativeLayout
             android:id="@+id/buttonLayout"
             android:layout_width="fill_parent"
