--- a/LoginActivity/res/menu/timeline_menu.xml
+++ b/LoginActivity/res/menu/timeline_menu.xml
@@ -8,20 +8,20 @@
         android:actionViewClass="android.widget.SearchView"/>
     <item
         android:id="@+id/addStory"
-		android:title=""
+		android:title="@string/btnAddStory"
         android:orderInCategory="2"
         android:icon="@drawable/ic_action_new"
 		android:showAsAction="always"/>
     <item
         android:id="@+id/map"
-        android:title=""
+        android:title="@string/btnHomeMap"
         android:orderInCategory="3"
         android:icon="@drawable/ic_action_map"
         android:showAsAction="always|collapseActionView"/>
     
      <item
         android:id="@+id/ownProfile"
-        android:title=""
+        android:title="@string/btnProfile"
         android:orderInCategory="4"
         android:icon="@drawable/ic_action_edit"
         android:showAsAction="always|collapseActionView"/>
