final delivery part-1

--- a/LoginActivity/res/layout/add_story.xml
+++ b/LoginActivity/res/layout/add_story.xml
@@ -114,8 +114,8 @@
 
                 <ImageView
                     android:id="@+id/imageViewAddStory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:contentDescription="@string/hello_world"
                     android:src="@drawable/ic_launcher" />
             </LinearLayout>
