--- a/LoginActivity/res/layout/login.xml
+++ b/LoginActivity/res/layout/login.xml
@@ -22,7 +22,9 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/email" />
+            android:text="@string/email"
+            android:textSize="18sp"
+              android:textStyle="bold" />
         
         <!-- Email TextField -->
         <EditText
@@ -30,14 +32,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enterEmail"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress" 
+            android:textSize="18sp" />
         
 		<!-- Password Label -->		
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
-            android:text="@string/password" />
+            android:text="@string/password" 
+            android:textSize="18sp"
+             android:textStyle="bold" />
         
 		<!-- Password TextField -->
         <EditText
@@ -45,7 +50,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enterPassword"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textSize="18sp"  />
         
 
         
