--- a/LoginActivity/res/layout/forgotpwd.xml
+++ b/LoginActivity/res/layout/forgotpwd.xml
@@ -22,7 +22,8 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/email" />
+            android:text="@string/email" 
+            android:textSize="18sp" />
         
         <!-- Email TextField -->
         <EditText
@@ -30,7 +31,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enterEmail"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textSize="18sp"  />
  
 		<!-- Reset Password button -->
         <Button
