--- a/LoginActivity/res/layout/map2.xml
+++ b/LoginActivity/res/layout/map2.xml
@@ -10,13 +10,15 @@
 	<TextView 
 	   android:text="@string/giveNameToPlace"
 	   android:layout_width="wrap_content"
-	   android:layout_height="wrap_content"    
+	   android:layout_height="wrap_content"   
+	   android:textSize="18sp"  
 	    />
 	<EditText 
 	    android:id="@+id/ettitle"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:inputType="text"
+	    android:textSize="18sp" 
 	    />
 	  
 
