--- a/LoginActivity/res/layout/show_story.xml
+++ b/LoginActivity/res/layout/show_story.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent" >
 
     <LinearLayout
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:onClick="seePlaceProfile"
                 android:textSize="18sp"
+                 android:textColor="#10BCC9"
                 android:background="@null" />
         </LinearLayout>
         <!-- Image Part -->
@@ -46,8 +47,8 @@
 
             <ImageView
                 android:id="@+id/imageViewShowStory"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:contentDescription="@string/hello_world"
                 android:src="@drawable/ic_launcher" />
         </LinearLayout>
@@ -75,17 +76,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
    		<TextView
-                android:layout_width="100sp"
+                android:layout_width="110sp"
                 android:layout_height="wrap_content"
                 android:text="@string/owner"
-                android:textSize="12sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
             <Button
                 android:id="@+id/ownerShowStory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="seeOwnerProfile"
-                android:textSize="12sp"
+                android:textSize="18sp"
+                android:textColor="#10BCC9"
                 android:background="@null" />
         </LinearLayout>
         <!-- Theme Part -->
@@ -96,7 +98,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
    			<TextView
-                android:layout_width="100sp"
+                android:layout_width="110sp"
                 android:layout_height="wrap_content"
                 android:text="@string/theme"
                 android:textSize="18sp"
@@ -106,7 +108,30 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
+            
         </LinearLayout>
+        
+           <!-- Remembered Count Part -->
+
+        <LinearLayout
+            android:id="@+id/rememberedShowStoryLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+   			<TextView
+                android:layout_width="110sp"
+                android:layout_height="wrap_content"
+                android:text="@string/remembered"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/rememberedShowStory"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+            
+        </LinearLayout>
+        
         <!-- Rate Part -->
 
         <LinearLayout
@@ -115,7 +140,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 		<TextView
-                android:layout_width="100sp"
+                android:layout_width="110sp"
                 android:layout_height="wrap_content"
                 android:text="@string/avgRate"
                 android:textSize="18sp"
@@ -126,17 +151,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
         </LinearLayout>
-
-        <ListView
-            android:id="@+id/commentList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="#b5b5b5"
-            android:dividerHeight="1dp"
-            android:listSelector="@drawable/list_selector"
-            android:longClickable="true" >
-        </ListView>
-		<!-- Rate Story Action Part -->
+	<!-- Rate Story Action Part -->
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -144,7 +159,8 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:layout_width="100sp"
+                android:id="@+id/spinnerRateLabel"
+                android:layout_width="110sp"
                 android:layout_height="wrap_content"
                 android:text="@string/rateStory"
                 android:textSize="18sp"
@@ -156,6 +172,18 @@
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
         </LinearLayout>
+        
+        <!--  comment list -->
+        <ListView
+            android:id="@+id/commentList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="#b5b5b5"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector"
+            android:longClickable="true" >
+        </ListView>
+	
         <RelativeLayout
             android:id="@+id/buttonLayout"
             android:layout_width="fill_parent"
