--- a/LoginActivity/res/menu/showstory_menu.xml
+++ b/LoginActivity/res/menu/showstory_menu.xml
@@ -2,21 +2,22 @@
     <item
         android:id="@+id/addStory"
 		android:title="@string/btnAddStory"
-        android:orderInCategory="2"
+        android:orderInCategory="1"
         android:icon="@drawable/ic_action_new"
 		android:showAsAction="always"/>
-    <item
+  
+
+     <item
+        android:id="@+id/recommendation"
+       	android:title="@string/btnRecom"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_drawer"
+        android:showAsAction="always|collapseActionView"/>
+       <item
         android:id="@+id/map"
         android:title="@string/btnHomeMap"
         android:orderInCategory="3"
         android:icon="@drawable/ic_action_map"
-        android:showAsAction="always|collapseActionView"/>
-    
-     <item
-        android:id="@+id/ownProfile"
-       	android:title="@string/btnProfile"
-        android:orderInCategory="4"
-        android:icon="@drawable/ic_action_edit"
         android:showAsAction="always|collapseActionView"/>
     <item
         android:id="@+id/advancedSearch"
